// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step Wizard Component conditional step when not visible 1`] = `
<div
  className={null}
>
  <div
    className="step-wrapper"
  >
    <div
      className="step  active"
    >
      <div>
        Step 1
      </div>
    </div>
    <div
      className="step"
    >
      <div>
        Step 2
      </div>
    </div>
    <div
      className="step"
    >
      <div>
        Step 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Step Wizard Component conditional step when not visible 2`] = `
Object {
  "activeStep": 0,
  "classes": Object {},
  "hashKeys": Object {
    "0": "step1",
    "1": "step2",
    "2": "step3",
    "step1": 0,
    "step2": 1,
    "step3": 2,
  },
}
`;

exports[`Step Wizard Component conditional step when visible 1`] = `
<div
  className={null}
>
  <div
    className="step-wrapper"
  >
    <div
      className="step  active"
    >
      <div>
        Step 1
      </div>
    </div>
    <div
      className="step"
    >
      <div>
        Step 2
      </div>
    </div>
    <div
      className="step"
    >
      <div>
        Step 3
      </div>
    </div>
    <div
      className="step"
    >
      <div>
        Step 4
      </div>
    </div>
  </div>
</div>
`;

exports[`Step Wizard Component conditional step when visible 2`] = `
Object {
  "activeStep": 0,
  "classes": Object {},
  "hashKeys": Object {
    "0": "step1",
    "1": "step2",
    "2": "step3",
    "3": "step4",
    "step1": 0,
    "step2": 1,
    "step3": 2,
    "step4": 3,
  },
}
`;

exports[`Step Wizard Component empty component 1`] = `
<div
  className={null}
>
  <div
    className="step-wrapper"
  />
</div>
`;

exports[`Step Wizard Component empty component 2`] = `
Object {
  "activeStep": 0,
  "classes": Object {},
  "hashKeys": Object {},
}
`;

exports[`Step Wizard Component garbage props 1`] = `
<div
  className={null}
>
  <div
    className="step-wrapper"
  >
    <div
      className="step  active"
    >
      <div>
        Step 1
      </div>
    </div>
    <div
      className="step"
    >
      <div>
        Step 2
      </div>
    </div>
    <div
      className="step"
    >
      <div>
        Step 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Step Wizard Component garbage props 2`] = `
Object {
  "activeStep": 0,
  "classes": Object {},
  "hashKeys": Object {
    "0": "First *3@ #$~!,\\";",
    "1": 2,
    "2": 1,
    "First *3@ #$~!,\\";": 0,
    "step2": 1,
  },
}
`;

exports[`Step Wizard Component html element steps 1`] = `
<div
  className={null}
>
  <div
    className="step-wrapper"
  >
    <div
      className="step  active"
    >
      <div>
        Step 1
      </div>
    </div>
    <div
      className="step"
    >
      &gt;
    </div>
  </div>
</div>
`;

exports[`Step Wizard Component html element steps 2`] = `
Object {
  "activeStep": 0,
  "classes": Object {},
  "hashKeys": Object {
    "0": "step1",
    "1": "step2",
    "step1": 0,
    "step2": 1,
  },
}
`;

exports[`Step Wizard Component initialStep set to 2 1`] = `
<div
  className={null}
>
  <div
    className="step-wrapper"
  >
    <div
      className="step"
    >
      <div>
        Step 1
      </div>
    </div>
    <div
      className="step  active"
    >
      <div>
        Step 2
      </div>
    </div>
    <div
      className="step"
    >
      <div>
        Step 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Step Wizard Component initialStep set to 2 2`] = `
Object {
  "activeStep": 1,
  "classes": Object {},
  "hashKeys": Object {
    "0": "step1",
    "1": "step2",
    "2": "step3",
    "step1": 0,
    "step2": 1,
    "step3": 2,
  },
}
`;

exports[`Step Wizard Component instance 1`] = `
<div
  className={null}
>
  <div
    className="step-wrapper"
  >
    <div
      className="step  active"
    >
      <div>
        Step 1
      </div>
    </div>
    <div
      className="step"
    >
      <div>
        Step 2
      </div>
    </div>
    <div
      className="step"
    >
      <div>
        Step 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Step Wizard Component instance 2`] = `
Object {
  "activeStep": 0,
  "classes": Object {},
  "hashKeys": Object {
    "0": "step1",
    "1": "step2",
    "2": "step3",
    "step1": 0,
    "step2": 1,
    "step3": 2,
  },
}
`;

exports[`Step Wizard Component isHashEnabled - false 1`] = `
<div
  className={null}
>
  <div
    className="step-wrapper"
  >
    <div
      className="step  active"
    >
      <div>
        Step 1
      </div>
    </div>
    <div
      className="step"
    >
      <div>
        Step 2
      </div>
    </div>
    <div
      className="step"
    >
      <div>
        Step 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Step Wizard Component isHashEnabled - false 2`] = `
Object {
  "activeStep": 0,
  "classes": Object {},
  "hashKeys": Object {
    "0": "First",
    "1": "step2",
    "2": "The End!",
    "First": 0,
    "The End!": 2,
    "step2": 1,
  },
}
`;

exports[`Step Wizard Component isHashEnabled - true 1`] = `
<div
  className={null}
>
  <div
    className="step-wrapper"
  >
    <div
      className="step  active"
    >
      <div>
        Step 1
      </div>
    </div>
    <div
      className="step"
    >
      <div>
        Step 2
      </div>
    </div>
    <div
      className="step"
    >
      <div>
        Step 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Step Wizard Component isHashEnabled - true 2`] = `
Object {
  "activeStep": 0,
  "classes": Object {},
  "hashKeys": Object {
    "0": "First",
    "1": "step2",
    "2": "The End!",
    "First": 0,
    "The End!": 2,
    "step2": 1,
  },
}
`;

exports[`Step Wizard Component isLazyMount - true 1`] = `
<div
  className={null}
>
  <div
    className="step-wrapper"
  >
    <div
      className="step  active"
    >
      <div>
        Step 2
      </div>
    </div>
  </div>
</div>
`;

exports[`Step Wizard Component isLazyMount - true 2`] = `
Object {
  "activeStep": 1,
  "classes": Object {},
  "hashKeys": Object {
    "0": "step1",
    "1": "step2",
    "2": "step3",
    "step1": 0,
    "step2": 1,
    "step3": 2,
  },
}
`;

exports[`Step Wizard Component nav 1`] = `
<div
  className={null}
>
  <div
    currentStep={1}
    firstStep={[Function]}
    goToStep={[Function]}
    isActive={false}
    lastStep={[Function]}
    nextStep={[Function]}
    previousStep={[Function]}
    totalSteps={3}
  >
    Nav
  </div>
  <div
    className="step-wrapper"
  >
    <div
      className="step  active"
    >
      <div>
        Step 1
      </div>
    </div>
    <div
      className="step"
    >
      <div>
        Step 2
      </div>
    </div>
    <div
      className="step"
    >
      <div>
        Step 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Step Wizard Component nav 2`] = `
Object {
  "activeStep": 0,
  "classes": Object {},
  "hashKeys": Object {
    "0": "step1",
    "1": "step2",
    "2": "step3",
    "step1": 0,
    "step2": 1,
    "step3": 2,
  },
}
`;

exports[`Step Wizard Component with 3 basic components 1`] = `
<div
  className={null}
>
  <div
    className="step-wrapper"
  >
    <div
      className="step  active"
    >
      <div>
        Step 1
      </div>
    </div>
    <div
      className="step"
    >
      <div>
        Step 2
      </div>
    </div>
    <div
      className="step"
    >
      <div>
        Step 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Step Wizard Component with 3 basic components 2`] = `
Object {
  "activeStep": 0,
  "classes": Object {},
  "hashKeys": Object {
    "0": "step1",
    "1": "step2",
    "2": "step3",
    "step1": 0,
    "step2": 1,
    "step3": 2,
  },
}
`;

exports[`Step Wizard Functions firstStep 1`] = `
Object {
  "activeStep": 0,
  "classes": Object {},
  "hashKeys": Object {
    "0": "step1",
    "1": "step2",
    "2": "step3",
    "step1": 0,
    "step2": 1,
    "step3": 2,
  },
}
`;

exports[`Step Wizard Functions goToStep 1`] = `
Object {
  "activeStep": 2,
  "classes": Object {
    "0": "animated fadeOutLeft",
    "2": "animated fadeInRight",
  },
  "hashKeys": Object {
    "0": "step1",
    "1": "step2",
    "2": "step3",
    "step1": 0,
    "step2": 1,
    "step3": 2,
  },
}
`;

exports[`Step Wizard Functions lastStep 1`] = `
Object {
  "activeStep": 2,
  "classes": Object {
    "0": "animated fadeOutLeft",
    "2": "animated fadeInRight",
  },
  "hashKeys": Object {
    "0": "step1",
    "1": "step2",
    "2": "step3",
    "step1": 0,
    "step2": 1,
    "step3": 2,
  },
}
`;

exports[`Step Wizard Functions nextStep 1`] = `
Object {
  "activeStep": 1,
  "classes": Object {
    "0": "animated fadeOutLeft",
    "1": "animated fadeInRight",
  },
  "hashKeys": Object {
    "0": "step1",
    "1": "step2",
    "2": "step3",
    "step1": 0,
    "step2": 1,
    "step3": 2,
  },
}
`;

exports[`Step Wizard Functions onStepChange 1`] = `
Object {
  "activeStep": 0,
  "classes": Object {
    "0": "animated fadeInLeft",
    "1": "animated fadeOutRight",
    "2": "animated fadeOutRight",
  },
  "hashKeys": Object {
    "0": "step1",
    "1": "step2",
    "2": "step3",
    "step1": 0,
    "step2": 1,
    "step3": 2,
  },
}
`;

exports[`Step Wizard Functions previousStep 1`] = `
Object {
  "activeStep": 1,
  "classes": Object {
    "0": "animated fadeOutLeft",
    "1": "animated fadeInLeft",
    "2": "animated fadeOutRight",
  },
  "hashKeys": Object {
    "0": "step1",
    "1": "step2",
    "2": "step3",
    "step1": 0,
    "step2": 1,
    "step3": 2,
  },
}
`;
